# alfred_sr_linux

./: .project  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
launch/: alfred_sr_linux.launch
src/alfred_sr_linux/: gspeech_node.py
